<resources>
    <string name="app_name">Node</string>
    <string name="log_in_microsoft">Log In With Microsoft</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="books">Books</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="new_book">New Book</string>
    <string name="isbn">ISBN</string>
    <string name="manual">Manual</string>
    <string name="number">Number</string>
    <string name="title">Title</string>
    <string name="authors_separate">Authors (separate authors by ,)</string>
    <string name="description">Description</string>
    <string name="add_genres">Add genres</string>
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="publisher_optional">Publisher (optional)</string>
    <string name="publisher">Publisher</string>
    <string name="recently_added">Recently added</string>
    <string name="book_thumbnail">Book Thumbnail</string>
    <string name="authors">Authors</string>
    <string name="leave_empty_if_no_changes">Leave empty if no changes</string>
    <string name="edit">Edit</string>
    <string name="genres">Genres</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus id metus in urna vestibulum luctus. Quisque pretium enim lectus, quis sagittis purus fermentum et. Aenean bibendum velit nec lacus laoreet semper. Duis et sapien dignissim, efficitur augue ut, pulvinar tortor. Vestibulum suscipit, mi sit amet pharetra auctor, turpis ipsum convallis metus, in porttitor sem lectus et ipsum. Nam sit amet fermentum lorem. Quisque nec suscipit nibh. Curabitur faucibus hendrerit tortor ac fringilla. Etiam et lorem eu lacus aliquet congue sed eu nunc. Donec porta, purus in tincidunt lobortis, nisl elit feugiat lorem, et mollis eros diam et ex. Nunc nibh sapien, venenatis eget mollis malesuada, tincidunt vitae augue. Vestibulum rhoncus mi vitae ultricies varius. Curabitur laoreet tortor felis, quis dictum lectus lobortis sit amet. Sed cursus lectus at dui molestie, eu vulputate nisl blandit. Pellentesque dignissim dolor sodales neque pharetra feugiat. Aenean vitae diam lobortis, aliquet erat scelerisque, malesuada magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec et justo tellus. Vivamus tortor eros, interdum ac elit a, laoreet sodales elit. Duis viverra interdum purus, quis consectetur ante finibus sed. Vivamus condimentum est turpis, ac dignissim ipsum mattis vel. Suspendisse quis commodo libero, a semper diam.</string>
    <string name="search_hint">Search</string>
    <string name="filter">Filter</string>
    <string name="leave_empty_if_no_filter">Leave empty if no filter</string>
    <string name="show_only">Show only</string>
    <string name="refresh">Refresh</string>
    <string name="to_read_list">To Read List</string>
    <string name="borrow">Borrow</string>
    <string name="to_read">To Read</string>
    <string name="borrowed_books">Borrowed books</string>
    <string name="reorder">Reorder</string>
    <string name="no_books_borrowed">Borrowed books will appear here</string>
    <string name="due_date">Due date</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="number_of_books_borrowed">Number of books borrowed</string>
    <string name="has_book_due_in">Has book due in</string>
    <string name="has_borrowed_books">Has borrowed books</string>
    <string name="no_borrowed_books">No borrowed books</string>
    <string name="has_overdue_books">Has overdue books</string>
    <string name="no_overdue_books">No overdue books</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="borrowed_by">Borrowed by</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="user_id">User ID</string>
    <string name="copy_id">Copy ID</string>
    <string name="cancel">Cancel</string>
    <string name="edit_display_name_warning">Display name can only contain lowercase letters, uppercase letters and spaces and must be at most 30 characters</string>
    <string name="report_problem">Report problem</string>
    <string name="submit">Submit</string>
    <string name="report_input_hint">Please explain your problem thoroughly and list steps to recreate the problem (minimum 100 characters)</string>
    <string name="requests_reports">Requests/Reports</string>
    <string name="read">Read</string>
    <string name="accept_request">Accept request</string>
    <string name="deny_request">Deny request</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="days_before_due_text_view">Days before due date to start reminders</string>
    <string name="days_before_reminding">Days before reminding</string>
    <string name="days_after_due_text_view">Days after due date to start reminders</string>
    <string name="set">Set</string>
    <string name="days_after_reminding">Days after reminding</string>
    <string name="set_time">Set time</string>
    <string name="borrowing">Borrowing</string>
    <string name="accept_borrow">Accept borrow</string>
    <string name="deny_borrow">Deny borrow</string>
    <string name="borrow_queue">Borrow queue</string>
</resources>