<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/home_icon" />
        <item android:id="@+id/users"
            android:title="@string/users"
            android:icon="@drawable/user_icon" />
        <item android:id="@+id/books"
            android:title="@string/books"
            android:icon="@drawable/book_icon" />
        <item android:id="@+id/report"
            android:title="@string/requests_reports"
            android:icon="@drawable/icon_report" />
        <item android:id="@+id/logOut"
            android:title="@string/log_out"
            android:icon="@drawable/log_out_icon" />
    </group>
</menu>