<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/reorder_users_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/reorder_books_borrowed_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_books_borrowed"/>

        <RadioButton
            android:id="@+id/reorder_display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/reorder_direction_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reorder_users_radio_group"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/reorder_users_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"/>

        <RadioButton
            android:id="@+id/reorder_users_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>