<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <CheckBox
            android:id="@+id/borrowed_books_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_borrowed_books"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/no_borrowed_books_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_borrowed_books"
            app:layout_constraintTop_toBottomOf="@id/borrowed_books_check_box"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/overdue_books_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_overdue_books"
            app:layout_constraintTop_toBottomOf="@id/no_borrowed_books_check_box"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:id="@+id/no_overdue_books_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_overdue_books"
            app:layout_constraintTop_toBottomOf="@id/overdue_books_check_box"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>