<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <!--Layout to contain title, author and thumbnail-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialog_book_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/dialog_book_title"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:singleLine="false"
                android:text="@string/title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/dialog_book_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/book_thumbnail" />

            <TextView
                android:id="@+id/dialog_book_authors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:singleLine="false"
                android:text="@string/authors"
                app:layout_constraintTop_toBottomOf="@id/dialog_book_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/dialog_book_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                app:layout_constraintTop_toBottomOf="@id/dialog_book_authors"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/dialog_book_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            app:layout_constraintTop_toBottomOf="@id/dialog_book_layout1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dialog_book_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publisher"
            app:layout_constraintTop_toBottomOf="@id/dialog_book_genres"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/dialog_book_expandable_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_book_publisher"
            android:layout_marginTop="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <ImageButton
                    android:id="@+id/arrow_button_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/expand_collapse"
                    android:src="@drawable/icon_expand_arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/dialog_book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_book_expandable_description"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/borrow_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrow"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_book_description"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/to_read_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_read"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/borrow_book_button"
            app:layout_constraintTop_toBottomOf="@id/dialog_book_description"
            android:layout_marginEnd="5dp"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>