<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/reorder_book_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/reorder_book_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"/>

        <RadioButton
            android:id="@+id/reorder_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>
    </RadioGroup>

    <View
        android:id="@+id/reorder_book_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/reorder_book_radio_group"
        android:layout_marginTop="5dp"/>

    <RadioGroup
        android:id="@+id/reorder_direction_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reorder_book_separator"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/reorder_book_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"/>

        <RadioButton
            android:id="@+id/reorder_book_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>