<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/manual_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/manual_radio_button">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:enabled="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_author_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authors_separate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manual_title_input"
            android:enabled="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manual_author_input"
            android:enabled="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_publisher_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publisher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manual_description_input"
            android:enabled="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/manual_book_number_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manual_publisher_input"
            android:enabled="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>